# DRP_GomoryHuTree

./: .gitignore  CMakeLists.txt  README.md  edge.h  gh_tree.cpp  gh_tree.h  gomory_hu.h  graph.h  main.cpp
src/: CMakeLists.txt  EdmondsKarp.cpp  EdmondsKarp.h  gh_tree.cpp  gh_tree.h  graph.h
tests/: CMakeLists.txt  test_gh_tree.cpp  test_graph.cpp
